--- a/package.json
+++ b/package.json
@@ -1,49 +1,66 @@
 {
     "homepage": "https://siyarg.github.io/Portfolio",
     "name": "siya-app",
+
     "version": "0.1.0",
+
     "private": true,
+
     "dependencies": {
         "@testing-library/jest-dom": "^5.17.0",
+
         "@testing-library/react": "^13.4.0",
+
         "@testing-library/user-event": "^13.5.0",
+
         "animate.css": "^4.1.1",
+
         "bootstrap": "^5.3.3",
+
         "chess.js": "^1.0.0-beta.8",
+
         "chessboardjsx": "^2.4.7",
+
         "mongoose": "^8.3.3",
+
         "react": "^18.3.1",
+
         "react-bootstrap": "^2.10.2",
+
         "react-dom": "^18.3.1",
+
         "react-scripts": "5.0.1",
+
         "web-vitals": "^2.1.4"
     },
+
     "scripts": {
         "start": "react-scripts start",
         "predeploy": "npm run build",
         "deploy": "gh-pages -d build",
         "build": "CI=false react-scripts build",
+
         "test": "react-scripts test",
+
         "eject": "react-scripts eject"
     },
+
     "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
+        "extends": ["react-app", "react-app/jest"]
     },
+
     "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
+        "production": [">0.2%", "not dead", "not op_mini all"],
+
         "development": [
             "last 1 chrome version",
+
             "last 1 firefox version",
+
             "last 1 safari version"
         ]
     },
+
     "devDependencies": {
         "gh-pages": "^6.1.1"
     }
